--- a/CSS/index.css
+++ b/CSS/index.css
@@ -74,4 +74,10 @@ body {
     /*Without this, clicking will make it sticky*/
       pointer-events: none;
   }
-  
+
+#product-image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+}
